--- a/c++/c++/c++.vcxproj.filters
+++ b/c++/c++/c++.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\..\Programa-Base-SnowMan\SnowMan.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Programa-Base-SnowMan\SnowMan.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Programa-Base-SnowMan\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="glm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
