--- a/c++/c++/c++.vcxproj
+++ b/c++/c++/c++.vcxproj
@@ -101,7 +101,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -151,6 +151,7 @@
     <ClCompile Include="..\..\Programa-Base-SnowMan\main.cpp" />
     <ClCompile Include="..\..\Programa-Base-SnowMan\MainWindow.cpp" />
     <ClCompile Include="..\..\Programa-Base-SnowMan\SnowMan.cpp" />
+    <ClCompile Include="glm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Programa-Base-SnowMan\Camera.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="..\..\Programa-Base-SnowMan\Game1.h" />
     <ClInclude Include="..\..\Programa-Base-SnowMan\MainWindow.h" />
     <ClInclude Include="..\..\Programa-Base-SnowMan\SnowMan.h" />
+    <ClInclude Include="glm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
